2004-11-02  Jakub Jelinek  <jakub@redhat.com>

	* debug/tst-chk1.c (ret): New volatile variable.
	(CHK_FAIL_END): Remove redundant ret setting.
	(do_test): Remote ret variable.

2004-01-03  Paolo Bonzini  <bonzini@gnu.org>

	* posix/regex_internal.h (__regfree) [!_LIBC]: Define to regfree.

2004-11-03  Marcus Brinkmann  <marcus@gnu.org>

	* sysdeps/generic/utime.c: Include <stddef.h>.

	* sysdeps/generic/sysconf.c: Include <grp.h> and <pwd.h>.

	* sysdeps/generic/tempname.c (__path_search): Add missing argument
	TRY_TMPDIR.

2004-10-31  Mariusz Mazur <mmazur@kernel.pl>

	* sysdeps/unix/sysv/linux/alpha/setregid.c: New file.
	* sysdeps/unix/sysv/linux/alpha/setresgid.c: New file.
	* sysdeps/unix/sysv/linux/alpha/setresuid.c: New file.
	* sysdeps/unix/sysv/linux/alpha/setreuid.c: New file.

2004-10-27  Derek R. Price  <derek@ximbiot.com>

	[BZ #487] This change is imported from gnulib.
	* time/mktime.c (not_equal_tm) [DEBUG]: Remove redundant check.

2004-10-24  Paul Eggert  <eggert@cs.ucla.edu>

	[BZ #473]
	* time/tst-mktime.c (main): Don't assume that mktime fails
	when given time stamps before 1970.  It returns negative
	time_t values instead, for compatibility with BSD.

	* time/tst-mktime2.c: New file.
	* time/Makefile (tests): Add it.

	[BZ #473] Import from gnulib.  Revamp to avoid several problems near
	time_t extrema, and on hosts with 64-bit time_t and 32-bit int.
	This fixes Debian bug 177940.
	* time/mktime.c (TIME_T_MIDPOINT): New macro.
	(ydhms_diff): Renamed from ydhms_tm_diff, with a new signature,
	which avoids overflow problems on hosts with 64-bit time_t and
	32-bit int.  All callers changed.  Now an inline function.
	Verify at compile-time that long int is wide enough to avoid
	these overflow problems.
	(guess_time_tm): New function.
	(__mktime_internal): Use it.  Avoid overflow when computing yday on
	hosts with 64-bit long and 32-bit int.  Remove tests for 69;
	no longer needed.  Use if rather than #ifdef for LEAP_SECONDS_POSSIBLE