@@ -1,3 +1,10 @@
+2004-11-04  Richard Henderson  <rth@redhat.com>
+
+	* sysdeps/unix/sysv/linux/alpha/register-dump.h (regnames): Align.
+	(linefeed): Remove.
+	(register_dump): Rewrite to generate into a flat buffer instead
+	of into iovecs.
+
 2004-11-02  Jakub Jelinek  <jakub@redhat.com>
 
 	* debug/tst-chk1.c (ret): New volatile variable.
